Array handling and bug fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<nav class="navbar-light navbar-expand-sm bg-light">
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -9,7 +9,7 @@
     </li>
   </ul>
 </nav>
-<div class="container">
+<div class="container scrollClass">
   <br>
   <h2 style="text-align: center;">{{title}}</h2>
   <hr>  
@@ -22,7 +22,7 @@
 
 <footer class="footer">
   <div class="container">
-      <span>All Rights Reserved 2020 @EMBL-EBI</span>
+      <b>All Rights Reserved 2020 @EMBL-EBI</b>
   </div>
 </footer>
 
