--- a/src/app/create-person/create-person.component.html
+++ b/src/app/create-person/create-person.component.html
@@ -1,26 +1,33 @@
 <h3>Create Person</h3>
-<div [hidden]="submitted" style="width: 400px;">
+<div style="width: 400px;">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="name">First Name</label>
+      <label for="name">First Name*</label>
       <input type="text" class="form-control" id="firstName" required [(ngModel)]="person.firstName" name="firstName">
     </div>
 
     <div class="form-group">
-      <label for="name">Last Name</label>
+      <label for="name">Last Name*</label>
       <input type="text" class="form-control" id="lastName" required [(ngModel)]="person.lastName" name="lastName">
     </div>
 
     <div class="form-group">
-      <label for="age">Age</label>
+      <label for="age">Age*</label>
       <input type="text" class="form-control" id="age" required [(ngModel)]="person.age" name="age">
     </div>
 
-    <button type="submit" class="btn btn-success">Submit</button>
+    <div class="form-group">
+      <label for="age">Favourite Colour*</label>
+      <input type="text" class="form-control" id="favouriteColour" required [(ngModel)]="person.favouriteColour" name="favouriteColour">
+    </div>
+
+    <div class="form-group">
+      <label for="hobby">Hobby</label>
+      &nbsp;&nbsp;<span class="badge badge-pill badge-info">You can provide comma separated values</span>
+      <input type="text" class="form-control" id="hobby" required [(ngModel)]="person.hobby" name="hobby">
+    </div>
+
+    <button type="submit" class="btn btn-outline-success">Submit</button>
   </form>
 </div>
 
-<div [hidden]="!submitted">
-  <h4>You submitted successfully!</h4>
-  <button class="btn btn-success" (click)="newPerson()">Add</button> 
-</div>
