--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,18 @@
     position: absolute;
     bottom: 0;
     width:100%;
-    height: 70px;
-    background-color: blue;
+    height: 50px;
+    background-color: #F2F2F2;
     text-align: center;
-    color: white;
+    color: rgb(59, 56, 56);
+    text-decoration-line: underline;
 }
 
 .active {
-    background:#4FA9DC; color:#000;
+    background:rgb(206, 201, 201); color:rgb(51, 49, 49);
  }
+
+ .scrollClass {
+    height:650px;
+    overflow-y: auto;
+  }
